# sn-game

./: .gitignore  CMakeLists.txt  Makefile  TODO.txt  main.c
src/: Makefile  alert.c  alert.h  event.c  game.h  gamepad.c  gamepad.h  init.c  main.c  quit.c  render.c  render.h  update.c
src/gamepad/: Makefile  game.h  gamepad.c  render.c
src/render/: game.h  gamepad.c  init.c  main.c  render.c  render.h  update.c
